# regarch

./: .gitignore  CMakeLists.txt  README.md
python_wrapper/: PythonConversion.cpp  PythonConversion.h  Wrap_DerivativeTools.cpp  Wrap_RegArchCompute.cpp  Wrap_RegArchDef.cpp  Wrap_SomeDistribution.cpp  Wrap_cAbstCondMean.cpp  Wrap_cAbstCondVar.cpp  Wrap_cAbstResiduals.cpp  Wrap_cAparch.cpp  Wrap_cAr.cpp  Wrap_cArch.cpp  Wrap_cArfima.cpp  Wrap_cCondMean.cpp  Wrap_cConst.cpp  Wrap_cConstCondVar.cpp  Wrap_cDVector_converters.cpp  Wrap_cEgarch.cpp  Wrap_cError.cpp  Wrap_cFigarch.cpp  Wrap_cGSLMatrix.cpp  Wrap_cGSLVector.cpp  Wrap_cGarch.cpp  Wrap_cGedResiduals.cpp  Wrap_cGtarch.cpp  Wrap_cLinReg.cpp  Wrap_cMa.cpp  Wrap_cMixNormResiduals.cpp  Wrap_cNagarch.cpp  Wrap_cNgarch.cpp  Wrap_cNormResiduals.cpp  Wrap_cNumericDerivative.cpp  Wrap_cPolynome.cpp  Wrap_cRegArchGradient.cpp  Wrap_cRegArchHessien.cpp  Wrap_cRegArchModel.cpp  Wrap_cRegArchValue.cpp  Wrap_cSqrgarch.cpp  Wrap_cStdDevInMean.cpp  Wrap_cStudentResiduals.cpp  (+5 more)
src/: RegArchPyWrapper.cpp  main.cpp
tests/: Test_DerivativeTools.py  Test_RegArchDef.py  Test_cAbstCondMean.py  Test_cAbstCondVar.py  Test_cAbstResiduals.py  Test_cAparch.py  Test_cAr.py  Test_cArch.py  Test_cArfima.py  Test_cCondMean.py  Test_cConst.py  Test_cConstCondVar.py  Test_cEgarch.py  Test_cError.py  Test_cGSLMatrix.py  Test_cGSLVector.py  Test_cRegArchValue.py  regarch_wrapper.pyd  test_Ar.py  test_Arfima.py  test_Const.py  test_LinReg.py  test_Ma.py  test_StdDevInMean.py  test_VarInMean.py
